--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -9,22 +9,34 @@
     ></svg-icon>
     <div class="title__text">
       ДОСТОВЕРНОСТЬ
-      <br>
+      <br />
       ОТБОРА ПРОБ
     </div>
   </div>
   <div class="main-icon">
-    <img src="assets/Icons/login/car.png">
+    <img src="assets/Icons/login/car.png" />
   </div>
   <form [formGroup]="loginForm">
     <div class="input-container">
-      <input type="text" name="login" required formControlName="login" autocomplete="off">
+      <input
+        type="text"
+        name="login"
+        required
+        formControlName="userName"
+        autocomplete="off"
+      />
       <label for="login">
         <span class="input-title">Логин</span>
       </label>
     </div>
     <div class="input-container">
-      <input type="password" name="pass" required formControlName="pass" autocomplete="off">
+      <input
+        type="password"
+        name="pass"
+        required
+        formControlName="password"
+        autocomplete="off"
+      />
       <label for="pass">
         <span class="input-title">Пароль</span>
       </label>
@@ -33,9 +45,7 @@
   <div class="forgot-password">
     <a href="#">Забыли пароль?</a>
   </div>
-  <button
-    class="btn"
-    (click)="submit($event)"
-    [disabled]="!loginForm.valid"
-  >Войти</button>
+  <button class="btn" (click)="submit($event)" [disabled]="!loginForm.valid">
+    Войти
+  </button>
 </div>
