--- a/src/app/pages/nfc-verify/components/verify-modal/verify-modal.component.html
+++ b/src/app/pages/nfc-verify/components/verify-modal/verify-modal.component.html
@@ -4,32 +4,25 @@
       <span class="header">Подтвердите выполнение</span>
     </div>
     <div class="info-block">
-      <span class="info-block-header">Выгружены пустые тары (0)</span>
-<!--      <div class="info-block-item">-->
-<!--        <ion-checkbox checked></ion-checkbox>-->
-<!--        <span class="light-text">АИ-95</span>-->
-<!--        <span class="gray-text">2 шт</span>-->
-<!--      </div>-->
-<!--      <div class="info-block-item">-->
-<!--        <ion-checkbox checked></ion-checkbox>-->
-<!--        <span class="light-text">АИ-95</span>-->
-<!--        <span class="gray-text">2 шт</span>-->
-<!--      </div>-->
-<!--      <div class="info-block-item">-->
-<!--        <ion-checkbox checked></ion-checkbox>-->
-<!--        <span class="light-text">АИ-95</span>-->
-<!--        <span class="gray-text">2 шт</span>-->
-<!--      </div>-->
-    </div>
-    <div class="info-block">
-      <span class="info-block-header">Загружены пробы ({{(tabsService.currentTask$ | async).test}})</span>
+      <span class="info-block-header">Выгружены пустые тары ({{(tabsService.currentTask$ | async)?.tares.length}})</span>
       <div
         class="info-block-item"
-        *ngFor="let test of (tabsService.currentTask$ | async)?.testList"
+        *ngFor="let tare of (tabsService.currentTask$ | async)?.tares"
       >
         <ion-checkbox checked></ion-checkbox>
-        <span class="light-text">{{test.name}}</span>
-        <span class="gray-text">{{test.val}} шт</span>
+        <span class="light-text">{{tare?.name}}</span>
+        <span class="gray-text">{{tare?.count}} шт</span>
+      </div>
+    </div>
+    <div class="info-block">
+      <span class="info-block-header">Загружены пробы ({{(tabsService.currentTask$ | async)?.probes.length}})</span>
+      <div
+        class="info-block-item"
+        *ngFor="let probe of (tabsService.currentTask$ | async)?.probes"
+      >
+        <ion-checkbox checked></ion-checkbox>
+        <span class="light-text">{{probe?.name}}</span>
+        <span class="gray-text">{{probe?.count}} шт</span>
       </div>
     </div>
   </div>
