--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -45,7 +45,7 @@
   <div class="forgot-password">
     <a href="#">Забыли пароль?</a>
   </div>
-  <button class="btn" (click)="submit($event)" [disabled]="!loginForm.valid">
+  <button class="btn" (click)="submit($event)" appRipple [disabled]="!loginForm.valid">
     Войти
   </button>
 </div>
