--- a/src/app/pages/tabs/pages/tabs-main/tabs-main.page.html
+++ b/src/app/pages/tabs/pages/tabs-main/tabs-main.page.html
@@ -2,6 +2,8 @@
   <span class="header__title">Статистика</span>
 </app-header>
 <div class="container">
+  <div class="shadow shadow_top"></div>
+  <div class="shadow shadow_bottom"></div>
   <div class="chart-container">
     <div class="chart" #chart>
       <svg-icon
