--- a/src/app/@shared/header/header.component.html
+++ b/src/app/@shared/header/header.component.html
@@ -14,11 +14,11 @@
     ></svg-icon>
     <div
       class="indicator"
-      [style.background]="(userInfo.statusList$ | async)[(userInfo.statusIndex$ | async)].bgColor"
+      [style.background]="userInfo.statusColors[(userInfo.statusIndex$ | async)]?.bgColor"
     >
       <div
         class="indicator__inner"
-        [style.background]="(userInfo.statusList$ | async)[(userInfo.statusIndex$ | async)].color"
+        [style.background]="userInfo.statusColors[(userInfo.statusIndex$ | async)]?.color"
       ></div>
     </div>
   </div>
