--- a/src/app/pages/tabs/pages/tabs-main/tabs-main.page.scss
+++ b/src/app/pages/tabs/pages/tabs-main/tabs-main.page.scss
@@ -20,6 +20,27 @@
   align-items: center;
   flex: 1;
 
+  position: relative;
+
+  .shadow {
+    height: sizeHeight(20);
+    width: 100%;
+
+    position: absolute;
+
+    z-index: 999;
+
+    &_top {
+      top: 0;
+      background: linear-gradient(180deg, var(--gradient-main-color-1) -0.04%, var(--gradient-main-color-2) 99.96%);
+    }
+
+    &_bottom{
+      bottom: 0;
+      background: linear-gradient(0deg, var(--gradient-main-color-1) -0.04%, var(--gradient-main-color-2) 99.96%);
+    }
+  }
+
   .chart-container {
     height: 58vh;
     width: 100%;
