--- a/src/app/pages/tabs/pages/tabs-ready/tabs-ready.page.scss
+++ b/src/app/pages/tabs/pages/tabs-ready/tabs-ready.page.scss
@@ -7,145 +7,135 @@
   display: flex;
   flex-direction: column;
 
-  .tab-btn {
+  position: relative;
+
+  .shadow {
+    height: sizeHeight(20);
+    width: 100%;
+
+    position: absolute;
+
+    z-index: 999;
+
+    &_top {
+      top: 10vh;
+      background: linear-gradient(180deg, var(--gradient-main-color-1) -0.04%, var(--gradient-main-color-2) 99.96%);
+    }
+  }
+
+  .header {
     height: 100%;
-    width: sizeWidth(310);
+    width: 90vw;
 
     display: flex;
-    align-items: center;
-    justify-content: center;
 
-    font-size: sizeHeight(24);
-    letter-spacing: sizeWidth(1.5);
-    text-transform: uppercase;
-    color: var(--text-main-color);
+    background: var(--bg-header-color);
+    position: relative;
 
-    border-bottom: sizeHeight(6) solid transparent;
+    .tab-btn {
+      height: 100%;
+      width: 50%;
 
-    &_active {
-      border-color: var(--border-blue-color);
-      color: var(--border-blue-color);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      font-size: sizeHeight(24);
+      letter-spacing: sizeWidth(1.5);
+      text-transform: uppercase;
+      color: var(--text-main-color);
+
+      &_active {
+        color: var(--border-blue-color);
+        transition: 0.3s;
+      }
+    }
+
+    &__active {
+      height: sizeHeight(6);
+      width: 50%;
+
+      background: var(--border-blue-color);
+
+      position: absolute;
+      left: 0;
+      bottom: 0;
     }
   }
 
   .content {
-    height: 83vh;
-    padding-bottom: sizeHeight(10);
+    height: 82vh;
 
     display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    overflow: auto;
 
     .tab {
       height: 100%;
-      width: sizeWidth(660);
-      margin-top: sizeHeight(15);
 
       display: flex;
-      flex-direction: column;
+      justify-content: flex-start;
 
-      position: relative;
-
-      .extra-info {
-        font-size: sizeHeight(30);
-        color: var(--text-subscript-color);
-      }
-
-      .no-task-msg {
-        height: 100%;
+      &__item {
+        width: 100vw;
+        padding-top: sizeHeight(20);
 
         display: flex;
-        align-items: center;
-        justify-content: center;
-
-        .msg {
-          font-size: sizeHeight(34);
-          color: var(--text-subscript-color);
-        }
-      }
-
-      .item {
-        height: sizeHeight(210);
-        width: sizeWidth(660);
-        padding: 0 sizeWidth(24);
-        margin-bottom: sizeHeight(20);
-
-        display: flex;
+        flex-direction: column;
         align-items: center;
 
-        background: var(--bg-header-color);
-        border-radius: sizeHeight(8);
+        position: relative;
 
-        filter: drop-shadow(0px 0px sizeHeight(20) var(--gradient-main-color-1));
-
-        .bottle-icon {
-          margin-right: sizeWidth(25);
-          color: var(--border-blue-color);
-
-          &_delivered {
-            color: var(--index-green1-color);
-          }
-        }
-
-        .description {
-          height: sizeHeight(150);
-          flex: 1;
-
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-
-          .title {
-            font-size: sizeHeight(34);
-            color: var(--text-main-color);
-          }
-
-          .manufacture {
-            font-size: sizeHeight(24);
-            color: var(--text-subscript-color);
-
-            &__name {
-              color: var(--text-contrast-color);
-            }
-          }
-        }
-      }
-
-      .nfc-btn {
-        height: sizeHeight(144);
-        width: 100%;
-        padding: sizeHeight(16) sizeWidth(40);
-
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        background: var(--bg-body-color);
-
-        font-size: sizeHeight(40);
-        color: var(--text-alwaysWhite-color);
-
-        position: fixed;
-        right: sizeHeight(0);
-        bottom: sizeHeight(0);
-
-        box-shadow: 0px (- sizeHeight(8)) sizeHeight(8) var(--gradient-main-color-1);
-
-        .btn {
+        .no-task-msg {
           height: 100%;
-          width: 100%;
 
           display: flex;
           align-items: center;
           justify-content: center;
 
-          background: var(--border-blue-color);
-          border-radius: sizeHeight(8);
+          .msg {
+            font-size: sizeHeight(34);
+            color: var(--text-subscript-color);
+          }
+        }
+
+        .extra-info {
+          font-size: sizeHeight(30);
+          color: var(--text-subscript-color);
+        }
+
+        .nfc-btn {
+          height: sizeHeight(144);
+          width: 100vw;
+          padding: sizeHeight(16) sizeWidth(40);
+
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          background: var(--bg-header-color);
 
           font-size: sizeHeight(40);
           color: var(--text-alwaysWhite-color);
+
+          position: fixed;
+          left: sizeHeight(0);
+          bottom: sizeHeight(0);
+
+          box-shadow: 0px (- sizeHeight(8)) sizeHeight(8) var(--gradient-main-color-1);
+
+          .btn {
+            height: 100%;
+            width: 100%;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            background: var(--border-blue-color);
+            border-radius: sizeHeight(8);
+
+            font-size: sizeHeight(40);
+            color: var(--text-alwaysWhite-color);
+          }
         }
       }
     }
