--- a/src/app/pages/nfc-verify/nfc-verify.page.html
+++ b/src/app/pages/nfc-verify/nfc-verify.page.html
@@ -40,7 +40,7 @@
     </div>
 
     <app-button class="btn btn_activateNFC" (click)="enableNfc()">Включить NFC</app-button>
-    <app-button class="btn" [disabled]="true" [isActive]="false">Завершить задание</app-button>
+    <app-button class="btn" [isActive]="false" icon="alert">Отменить задание</app-button>
   </div>
 </div>
 
