--- a/src/app/@shared/modals/dialog-modal/dialog-modal.component.html
+++ b/src/app/@shared/modals/dialog-modal/dialog-modal.component.html
@@ -2,6 +2,6 @@
     <span class="message">{{ message }}</span>
     <div class="buttons">
         <button class="btn" (click)="dismiss()">ЗАКРЫТЬ</button>
-        <button class="btn btn_active" (click)="dismiss()">ПОДТВЕРДИТЬ</button>
+        <button class="btn btn_active" (click)="accept()">ПОДТВЕРДИТЬ</button>
     </div>
 </div>
