--- a/src/app/@shared/modals/status-begin/status-begin.component.scss
+++ b/src/app/@shared/modals/status-begin/status-begin.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../../theme/functions";
+@import "../../../../theme/functions";
 * {
   box-sizing: border-box;
 }
@@ -20,8 +20,6 @@ button {
   background: var(--bg-modal-color);
 
   .header {
-    display: flex;
-    flex-direction: column;
     padding: sizeHeight(10) 0;
 
     .info {
@@ -30,8 +28,34 @@ button {
     }
   }
 
+  .content {
+    width: 100%;
+    flex: 1;
+    display: flex;
+    align-items: center;
+
+    &__item {
+      width: 100%;
+      margin: sizeHeight(10) 0 sizeHeight(70);
+
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .name {
+        margin-right: sizeWidth(40);
+        font-size: sizeHeight(34);
+        color: var(--text-contrast-color);
+      }
+
+      .dropdown-container {
+        height: sizeHeight(90);
+        flex: 1;
+      }
+    }
+  }
+
   .buttons {
-    margin-top: auto;
     display: flex;
 
     .btn {
