--- a/src/app/pages/end-task/end-task.component.html
+++ b/src/app/pages/end-task/end-task.component.html
@@ -9,34 +9,37 @@
         }"
       ></svg-icon>
     </div>
-    <div class="title">{{(tabsService.currentTask$ | async)?.number}}</div>
+    <div class="title">{{ (tabsService.currentTask$ | async)?.number }}</div>
   </app-header>
 
   <div class="content">
-    <app-step-progress-bar [stepsCount]="3" [activeStepIndex]="2"></app-step-progress-bar>
+    <app-step-progress-bar
+      [stepsCount]="3"
+      [activeStepIndex]="2"
+    ></app-step-progress-bar>
 
     <div class="content-text-block">
-      <span class="subscript-text">Установка: &nbsp;<span class="light-text"> {{(tabsService.currentTask$ | async)?.plantName}}</span></span>
+      <span class="subscript-text">
+        Установка: &nbsp;<span class="light-text">
+          {{ (tabsService.currentTask$ | async)?.plantName }}
+        </span>
+      </span>
       <div class="icons">
-        <div
-          class="icon"
-        >
+        <div class="icon">
           <svg-icon
             [svgStyle]="{
-            'height': '2.5vh',
-            'width': '2.5vh'
-          }"
+              height: '2.5vh',
+              width: '2.5vh'
+            }"
             src="assets/Icons/tabs/tasks-tab/tare.svg"
           ></svg-icon>
         </div>
-        <div
-          class="icon"
-        >
+        <div class="icon">
           <svg-icon
             [svgStyle]="{
-            'height': '2.5vh',
-            'width': '2.5vh'
-          }"
+              height: '2.5vh',
+              width: '2.5vh'
+            }"
             src="assets/Icons/tabs/tasks-tab/test.svg"
           ></svg-icon>
         </div>
@@ -50,14 +53,21 @@
       <svg-icon
         src="assets/Icons/end-task/main.svg"
         [svgStyle]="{
-            'height': 'auto',
-            'width.%': 100
-          }"
+          height: 'auto',
+          'width.%': 100
+        }"
       ></svg-icon>
     </div>
 
-    <app-button class="btn btn_active" (click)="nextTask()">Следующее задание</app-button>
-    <app-button class="btn" [isActive]="false" [disabled]="true">Завершить задание</app-button>
+    <app-button class="btn btn_active" (click)="nextTask()">
+      {{
+        (tabsService.newItems$ | async).length === 1
+          ? "Завершить все задания"
+          : "Следующее задание"
+      }}
+    </app-button>
+    <app-button class="btn" [isActive]="false" icon="alert">
+      Отменить задание
+    </app-button>
   </div>
 </div>
-
