--- a/src/app/pages/nfc-verify/components/verify-modal/verify-modal.component.html
+++ b/src/app/pages/nfc-verify/components/verify-modal/verify-modal.component.html
@@ -1,39 +1,43 @@
 <div class="container">
+  <div class="header">
+    <span class="info">Подтвердите выполнение</span>
+  </div>
   <div class="content">
-    <div class="header-block">
-      <span class="header">Подтвердите выполнение</span>
-    </div>
     <div class="info-block">
-      <span class="info-block-header">Выгружены пустые тары ({{(tabsService.currentTask$ | async)?.tares.length}})</span>
+      <span class="info-block-header">
+        Выгружены пустые тары ({{
+          (tabsService.currentTask$ | async)?.tares.length
+        }})
+      </span>
       <div
         class="info-block-item"
         *ngFor="let tare of (tabsService.currentTask$ | async)?.tares"
       >
         <ion-checkbox checked></ion-checkbox>
-        <span class="light-text">{{tare?.name}}</span>
-        <span class="gray-text">{{tare?.count}} шт</span>
+        <span class="light-text">{{ tare?.name }}</span>
+        <span class="gray-text">{{ tare?.count }} шт</span>
       </div>
     </div>
     <div class="info-block">
-      <span class="info-block-header">Загружены пробы ({{(tabsService.currentTask$ | async)?.probes.length}})</span>
+      <span class="info-block-header">
+        Загружены пробы ({{
+          (tabsService.currentTask$ | async)?.probes.length
+        }})
+      </span>
       <div
         class="info-block-item"
         *ngFor="let probe of (tabsService.currentTask$ | async)?.probes"
       >
         <ion-checkbox checked></ion-checkbox>
-        <span class="light-text">{{probe?.name}}</span>
-        <span class="gray-text">{{probe?.count}} шт</span>
+        <span class="light-text">{{ probe?.name }}</span>
+        <span class="gray-text">{{ probe?.count }} шт</span>
       </div>
     </div>
   </div>
-  <app-button (click)="presentNfcTimerModal()" class="accept-button">Подтверждаю</app-button>
-  <div (click)="close()" class="close-button">
-    <svg-icon [svgStyle]="{
-         'width': '2.2vh',
-         'height': '2.2vh'
-       }" class="close-button__icon" src="assets/Icons/shared/close_icon.svg"
-    >
-    </svg-icon>
+  <div class="buttons">
+    <button class="btn" (click)="close()">отменить</button>
+    <button class="btn btn_active" (click)="presentNfcTimerModal()">
+      подтвердить
+    </button>
   </div>
 </div>
-
