--- a/src/global.scss
+++ b/src/global.scss
@@ -48,22 +48,6 @@ body,
   width: 0;
 }
 
-.nfc-verify-modal {
-  ion-backdrop {
-    opacity: 0.6 !important;
-  }
-  .modal-wrapper {
-    margin-right: sizeHeight(60);
-    margin-left: sizeHeight(60);
-    margin-bottom: sizeHeight(260);
-    width: 100%;
-    height: 58%;
-    border-radius: sizeWidth(15);
-    background: var(--bg-body-color);
-    overflow: hidden;
-  }
-}
-
 .car-modal {
   .modal-wrapper {
     height: 100%;
@@ -71,56 +55,51 @@ body,
   }
 }
 
-.choose-task,
-.activity-modal,
-.map-modal,
-.choose-status,
-.current-status {
-  --height: 44vh;
+.custom-modal {
+  margin: auto;
+  padding: sizeHeight(100) 0;
 
   .modal-wrapper {
-    width: sizeWidth(550);
-
+    box-shadow: 0 sizeHeight(48) sizeWidth(76) var(--modal-shadow-color-2),
+      0 sizeHeight(18) sizeWidth(92) var(--modal-shadow-color-1),
+      0 sizeHeight(22) sizeWidth(30) var(--modal-shadow-color-3);
     border-radius: sizeHeight(8);
     background: transparent;
-    filter: drop-shadow(0px 0px sizeHeight(20) var(--gradient-main-color-1));
 
     overflow: hidden;
   }
 }
 
 .choose-status {
-  --height: 38vh;
-}
-.current-status {
-  height: auto;
-  --min-height: 38vh;
-  --max-height: 44vh;
-}
-
-.map-modal {
-  --height: 32vh;
-}
-
-.simple-modal {
-  --height: 21vh;
-
   .modal-wrapper {
-    width: sizeWidth(550);
-    border-radius: sizeHeight(8);
-    background: transparent;
-    filter: drop-shadow(0px 0px sizeHeight(20) var(--gradient-main-color-1));
+    height: sizeHeight(460);
+    width: sizeWidth(560);
+  }
+}
 
-    overflow: hidden;
+.current-status {
+  .modal-wrapper {
+    overflow: visible;
+  }
+}
+
+.resolve-modal {
+  .modal-wrapper {
+    height: sizeHeight(260);
+    width: sizeWidth(560);
+  }
+}
+
+.nfc-verify-modal {
+  .modal-wrapper {
+    height: sizeHeight(890);
+    width: sizeWidth(560);
   }
 }
 
 .avatar-modal {
-  --height: 100vh;
-
   .modal-wrapper {
-    width: 100%;
-
-    overflow: hidden;
+    height: sizeHeight(340);
+    width: sizeWidth(560);
   }
 }
