--- a/src/theme/light-style.scss
+++ b/src/theme/light-style.scss
@@ -4,6 +4,7 @@
   --bg-body-color: #FFFFFF; /*Тело виджета*/
   --bg-header-color: #FFFFFF; /*Хедер виджета*/
   --bg-buttons-color: #D7E2F2; /*Кнопки*/
+  --bg-modal-color: #FFFFFF; /*Модальный окна*/
   --bg-dropdown-item: rgba(235, 241, 249, 0.5); /*Выпадающие меню*/
   --indicators-bg: #EBF1F9;
   --header-logo-bg: #0089FF;
@@ -61,6 +62,10 @@
   --filter-shadow: rgba(0, 137, 255, 0.5);
   --datepicker-selected: rgba(63, 169, 245, 0.25);
 
+  /*карта*/
+  --map-river-color: #83899F;
+  --map-bg-sub-color: #CBCBCB;
+
   /*Визуализация*/
   --data-c1-color: #A56EFF;
   --data-c2-color: #673AB7;
@@ -77,4 +82,8 @@
   /*Тень*/
   --gradient-main-color-1: rgba(0,0,0,0.08);
   --gradient-main-color-2: rgba(25,28,44,0);
+
+  --modal-shadow-color-1: rgba(0, 0, 0, 0.12);
+  --modal-shadow-color-2: rgba(0, 0, 0, 0.14);
+  --modal-shadow-color-3: rgba(0, 0, 0, 0.2);
 }
