--- a/src/app/pages/end-task/end-task.component.html
+++ b/src/app/pages/end-task/end-task.component.html
@@ -66,7 +66,7 @@
           : "Следующее задание"
       }}
     </app-button>
-    <app-button class="btn" [isActive]="false" icon="alert">
+    <app-button class="btn" [isActive]="false" icon="alert" (click)="cancel()">
       Отменить задание
     </app-button>
   </div>
