Фиксы по мелочи

--- a/src/app/pages/end-task/end-task.component.html
+++ b/src/app/pages/end-task/end-task.component.html
@@ -20,7 +20,7 @@
 
     <div class="content-text-block">
       <span class="subscript-text">
-        Установка: &nbsp;<span class="light-text">
+        Установка: <span class="light-text">
           {{ (tabsService.currentTask$ | async)?.plantName }}
         </span>
       </span>
