--- a/src/app/pages/tabs/pages/tabs-tasks/components/tabs-tasks-card/tabs-tasks-card.component.html
+++ b/src/app/pages/tabs/pages/tabs-tasks/components/tabs-tasks-card/tabs-tasks-card.component.html
@@ -5,7 +5,7 @@
   <div class="description">
     <span class="title"
       >{{ data?.number }},<span class="manufacture"
-        >Установка: {{ data?.plantName }}</span
+        >Уст: {{ data?.plantName }}</span
       ></span
     >
     <div class="description__item">
