--- a/src/theme/dark-style.scss
+++ b/src/theme/dark-style.scss
@@ -3,6 +3,7 @@
   --bg-dashboard-color: #12151E; /*Дэшборды и Формы*/
   --bg-body-color: #1c1f2b; /*Тело виджета*/
   --bg-header-color: #272A38; /*Хедер виджета*/
+  --bg-map-color: #12151E;
   --bg-buttons-color: #303549; /*Кнопки*/
   --bg-modal-color: #1c1f2b; /*Модальный окна*/
   --bg-dropdown-item: rgba(39, 42, 56, 0.5); /*Выпадающие меню*/
