--- a/src/theme/light-style.scss
+++ b/src/theme/light-style.scss
@@ -2,6 +2,7 @@
   /*Фон*/
   --bg-dashboard-color: #F5F8FD; /*Дэшборды и Формы*/
   --bg-body-color: #FFFFFF; /*Тело виджета*/
+  --bg-map-color: #AAAAAA;
   --bg-header-color: #FFFFFF; /*Хедер виджета*/
   --bg-buttons-color: #D7E2F2; /*Кнопки*/
   --bg-modal-color: #FFFFFF; /*Модальный окна*/
