--- a/src/app/pages/map/components/map-progress/map-progress.component.html
+++ b/src/app/pages/map/components/map-progress/map-progress.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="info">
     <div class="info__title">{{(tabsService.currentTask$ | async)?.plantName}}</div>
-    <div class="info__time">осталось ехать {{(15 - percent / 100 * 15) | number:'0.0-0'}} секунд</div>
+    <div class="info__time">ост. ехать {{(15 - percent / 100 * 15) | number:'0.0-0'}} секунд</div>
   </div>
 
   <div class="diagram">
