--- a/src/app/pages/tabs/pages/tabs-tasks/components/tabs-tasks-timer/tabs-tasks-timer.component.html
+++ b/src/app/pages/tabs/pages/tabs-tasks/components/tabs-tasks-timer/tabs-tasks-timer.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <ng-container [ngSwitch]="timerType">
     <div class="timer timer__normal" *ngSwitchCase="'normal'">
-      <svg class="svg">
+      <svg #svg class="svg">
         <circle class="bg-circle" cx="50%" cy="50%" />
         <circle
           class="percent"
