add tech support

--- a/src/app/@shared/avatar-modal/components/support/support.component.html
+++ b/src/app/@shared/avatar-modal/components/support/support.component.html
@@ -9,12 +9,13 @@
   </div>
 
   <textarea
-    *ngIf="currentValueIdx === 0"
+    *ngIf="currentValueId === textValueId"
     placeholder="Напишите причину"
+    [(ngModel)]="message"
   ></textarea>
 
   <div class="btns">
-    <app-button class="btn" [isActive]="false">Отправить обращение</app-button>
+    <app-button class="btn" (click)="sendSupport()" [disabled]="isDisableSend" [isActive]="false">Отправить обращение</app-button>
     <app-button class="btn" [isActive]="false">Позвонить оператору</app-button>
   </div>
 </div>
