--- a/src/app/@shared/modals/statistic-modal/statistic-modal.component.scss
+++ b/src/app/@shared/modals/statistic-modal/statistic-modal.component.scss
@@ -1,28 +1,45 @@
-@import "../../../../theme/functions";
+@import "src/theme/functions.scss";
 
 * {
-  box-sizing: border-box
+  box-sizing: border-box;
+}
+
+button {
+  outline: none;
+  background: transparent;
+  border: none;
 }
 
 .container {
-  padding: sizeHeight(45) sizeHeight(43) sizeHeight(43);
-  background: var(--bg-body-color);
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  border-radius: sizeHeight(8);
-  height: 100%;
-  justify-content: space-between;
+
+  background: var(--bg-modal-color);
+
+  .header {
+    height: sizeHeight(100);
+    min-height: sizeHeight(100);
+    padding: sizeHeight(10) sizeWidth(30);
+
+    display: flex;
+    align-items: center;
+
+    .info {
+      color: var(--text-contrast-color);
+      font-size: sizeHeight(34);
+    }
+  }
 
   .content {
-    .header-block {
-      text-align: center;
-      padding-bottom: sizeHeight(16);
+    padding: sizeHeight(10) sizeWidth(30);
+    flex: 1;
 
-      .header {
-        font-size: sizeHeight(32);
-        color: var(--text-contrast-color);
-      }
-    }
+    display: flex;
+    flex-direction: column;
+
+    overflow-y: auto;
 
     .statistic-item {
       height: sizeHeight(40);
@@ -49,18 +66,28 @@
     }
   }
 
-  .accept-button {
-    height: sizeHeight(110);
-    margin: 0 auto;
-  }
+  .buttons {
+    height: sizeHeight(100);
+    min-height: sizeHeight(100);
+    padding: sizeHeight(10) sizeWidth(30);
 
-  .close-button {
-    position: absolute;
-    right: sizeWidth(32);
-    top: sizeWidth(21);
+    display: flex;
+    align-items: center;
 
-    &__icon {
-      color: var(--border-icon-color);
+    .btn {
+      font-size: sizeHeight(34);
+      color: var(--text-subscript-color);
+
+      text-transform: uppercase;
+
+      &_active {
+        color: var(--border-blue-color);
+      }
+
+      &:first-child {
+        margin-left: sizeWidth(10);
+        margin-right: auto;
+      }
     }
   }
 }
