add disabled btn info

--- a/src/app/pages/tabs/pages/tabs-ready/tabs-ready.page.html
+++ b/src/app/pages/tabs/pages/tabs-ready/tabs-ready.page.html
@@ -45,9 +45,9 @@
         ></app-tabs-ready-item>
 
         <div class="nfc-btn">
-          <app-button (click)="toNfc()" class="btn"
-            >Отсканировать NFC-метку</app-button
-          >
+          <app-button (click)="toNfc()" class="btn">
+            Отсканировать NFC-метку
+          </app-button>
         </div>
       </div>
 
