--- a/src/app/pages/tabs/pages/tabs-ready/tabs-ready.page.scss
+++ b/src/app/pages/tabs/pages/tabs-ready/tabs-ready.page.scss
@@ -100,6 +100,9 @@
         }
 
         .extra-info {
+          padding: 0 sizeWidth(30);
+          margin: sizeHeight(10) 0;
+
           font-size: sizeHeight(30);
           color: var(--text-subscript-color);
         }
