--- a/src/app/pages/tabs/pages/tabs-tasks/components/choose-task-overlay/choose-task-overlay.component.html
+++ b/src/app/pages/tabs/pages/tabs-tasks/components/choose-task-overlay/choose-task-overlay.component.html
@@ -17,7 +17,7 @@
       <div class="checkbox">
         <ion-checkbox [(ngModel)]="item.checked" color="primary"></ion-checkbox>
       </div>
-      <div class="item__name">{{item.manufacture}}</div>
+      <div class="item__name">{{item.plantName}}</div>
     </div>
   </div>
   <div
