--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -14,7 +14,7 @@
   <div [style]="transformStyle" class="box">
     <div [style]="rotationStyle" class="entry-box">
       <div [style]="scaleStyle" class="entry-box">
-        <div (click)="trackPosition($event)" class="entry-box entry-box__map" [style]="mapStyle">
+        <div class="entry-box entry-box__map" [style]="mapStyle">
           <img src="assets/Icons/map/map{{(theme.isDarkTheme | async) ? '-dark' : '-light'}}.svg"/>
           <div #svg class="svg"></div>
         </div>
