--- a/src/app/@shared/cancel-task/cancel-task.component.html
+++ b/src/app/@shared/cancel-task/cancel-task.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <app-header withThemeSwitch="false">
+  <app-header [withThemeSwitch]="false">
     <div class="arrow" (click)="dismiss()">
       <svg-icon
         src="/assets/Icons/tabs/arrowLeft.svg"
